@@ -1,104 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	<title>Sudo Slider | Navigation in slider</title>
-	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />    
-	<link rel="STYLESHEET" type="text/css" href="../css/style.css">
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-	<script type="text/javascript" src="../js/jquery.sudoSlider.min.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function(){	
-		    var sudoSlider = $("#slider").sudoSlider({
-                effect: "reveal",
-				customLink: '.custom',
-				prevNext:false,
-                speed: 800,
-				beforeAnimation: function(t){ 
-					var scroll = -t+2;
-					if (scroll == 1) scroll = 0;
-					if (scroll < -2) scroll = -2;
-					var scroll = scroll * $('.custom').eq(0).outerWidth(true);
-					
-					var speed = 800;
-					
-					$('.customBox').animate(
-						{ marginLeft: scroll },
-						{
-							queue:false,
-							duration:speed
-						}
-					);
-				}
-		   });
-		});
-	</script>
-	
-
-
-	
-</head>
-<body>
-<div id="container">
-	<h1>Sudo Slider jQuery Plugin - Navigation in slider</h1> 
-	<a href="http://webbies.dk/SudoSlider/help/#Settings-afterAnimation">afterAnimation & beforeAnimation in docs</a>
-	<div style="position:relative;">
-		<div id="slider">
-			<ul>				
-				<li><img src="../images/01.jpg" alt="image description"/></li>
-				<li><img src="../images/02.jpg" alt="image description"/></li>
-				<li><img src="../images/03.jpg" alt="image description"/></li>
-				<li><img src="../images/04.jpg" alt="image description"/></li>
-				<li><img src="../images/05.jpg" alt="image description"/></li>			
-			</ul>
-		</div>
-		<div style="background:none;width:210px;height:40px;position:absolute;top:150px;left:100px;overflow:hidden;z-index:2">
-			<div class="customBox" style="width:350px;height:40px;background:lightgrey;">
-				<div class="custom" data-target="1" style="height:30px;width:60px;margin:2px;float:left;background:grey;padding:3px;" >
-					<img src="../images/01.jpg" height="30px" width="60px"/>
-				</div>
-				<div class="custom" data-target="2"  style="height:30px;width:60px;margin:2px;float:left;background:grey;padding:3px;" >
-					<img src="../images/02.jpg" height="30px" width="60px"/>
-				</div>
-				<div class="custom" data-target="3"  style="height:30px;width:60px;margin:2px;float:left;background:grey;padding:3px;" >
-					<img src="../images/03.jpg" height="30px" width="60px"/>
-				</div>
-				<div class="custom" data-target="4"  style="height:30px;width:60px;margin:2px;float:left;background:grey;padding:3px;" >
-					<img src="../images/04.jpg" height="30px" width="60px"/>
-				</div>
-				<div class="custom" data-target="5"  style="height:30px;width:60px;margin:2px;float:left;background:grey;padding:3px;" >
-					<img src="../images/05.jpg" height="30px" width="60px"/>
-				</div>
-			</div>
-		</div>
-	</div>
-	<h3>Usage: See the source code. Remember the "z-index:2". </h3>
-</div>
-<div style="width:728px;height:90px;margin:0 auto;">
-	<script type="text/javascript">
-		<!--
-		google_ad_client = "pub-8170632875475442";
-		/* Sudo Slider, lang horisontal */
-		google_ad_slot = "0149025622";
-		google_ad_width = 728;
-		google_ad_height = 90;
-		//-->
-	</script>
-	<script type="text/javascript"
-	src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-	</script>
-</div>
-<script type="text/javascript">
-    /* Google Analytics, please remove
-     var _gaq = _gaq || [];
-     _gaq.push(['_setAccount', 'UA-20484420-1']);
-     _gaq.push(['_trackPageview']);
-
-     (function() {
-     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
-     /* */
-</script>
-</body>
-</html>
