@@ -53,7 +53,6 @@
             <br><a href="demos/multiple continuous slides.html">Multiple continuous slides</a>
             <br><a href="demos/multiple sliders.html">Multiple sliders</a>
             <br><a href="demos/multiple slides in pages.html">Multiple slides in pages</a>
-            <br><a href="demos/navigation in slider.html">Navigation in slider</a>
             <br><a href="demos/nested sliders.html">Nested sliders</a>
             <br><a href="demos/numeric.html">Numeric</a>
             <br><a href="demos/pause on mouseover.html">Pause on mouseover</a>
