@@ -444,3 +444,4 @@ Change in script: Fixed some handlers that wasn't unbound when the slider was de
 Change in script: Fixed 2 bugs relating to height/width adjustments while an animation is running.
 Change in script: Auto is now stopped when destroying (but will start again on init if the option is still true).
 New: Added the SliderBuilder, that can be used to build a slider, and test out options.
+Change in demos: Removed the navigation in slider demo.
